# site-log

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  main.py  manage.py  mise.toml  pyproject.toml
geologger/: admin.py  apps.py  geocode.py  models.py  urls.py  views.py
geologger/migrations/: 0001_add_jobsite_table.py  0002_add_technician_table.py  0003_add_sitevisitlog_table.py
geologger/tests/: test_models.py  test_views.py
site_log/: asgi.py  settings.py  urls.py  wsgi.py
